--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
 
     <div class="title">
-      <img class="tv-upper" src="img/tv-maed-eng.png" alt="" />
-    </div>
+        <img src="img/tv-maed.png" alt="" />
+      </div>
 
     <!-- Second Table with Sample Text -->
     <table class="second-table" border="1">
@@ -83,7 +83,7 @@ Attached are the different course syllabi that depict the alignment of the learn
             <br />
             <a
               href="https://drive.google.com/file/d/1ynxAurfhBiScZ-OKlHvycGhrubNJOQSN/view?usp=drive_link"
-              >MAED ENG 718
+              >MAED ENG 716
             </a>
           </td>
         </tr>
